Ingreso de Productos, Ventas, Pagos desplegado